# export-validator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/export_validator/: differ.h  json_writer.h  npz_loader.h  types.h
cpp/src/: differ.cpp  json_writer.cpp  main.cpp  npz_loader.cpp  runtimes_smoke.cpp
cpp/tests/: CMakeLists.txt  test_differ.cpp  test_json_writer.cpp  test_json_writer_random.cpp  test_npz_loader.cpp
docs/: drift-debugging.md  per-layer.md  tolerance.md
examples/: resnet18_layer_map.json
examples/reports/: mobilenet_v3_small_fp32.json  mobilenet_v3_small_fp32.md  resnet18_fp32.json  resnet18_fp32.md  resnet50_fp32.json  resnet50_fp32.md  vit_b_16_fp32.json  vit_b_16_fp32.md
src/export_validator/: __init__.py  attribution.py  cli.py  compare.py  export.py  format_mismatch.py  instrument.py  ort_capture.py  pt_capture.py  report.py
src/export_validator/models/: __init__.py  _base.py  mobilenet_v3_small.py  resnet18.py  resnet50.py  vit_b_16.py
tests/integration/: test_multi_arch_parity.py  test_python_cpp_parity.py  test_resnet18_pipeline.py
tests/unit/: test_attribution.py  test_compare.py  test_compare_properties.py  test_export.py  test_format_mismatch.py  test_instrument.py  test_instrument_properties.py
