[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "export-validator"
version = "0.1.0"
description = "Per-layer ONNX export parity validator for PyTorch models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sai Asish Y" }]
dependencies = [
    "click>=8.1",
    "numpy<2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "torch>=2.4",
    "torchvision>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24",
]

[project.scripts]
export-validator = "export_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
export_validator = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["torch.*", "torchvision.*", "onnx.*", "onnxruntime.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
